fix(home): style scrollbar with gradient colors

--- a/public/css/home.module.css
+++ b/public/css/home.module.css
@@ -89,7 +89,8 @@
   margin-inline-start: 95px;
   overflow-x: auto;
   padding: 5px;
-  scrollbar-color: transparent transparent;
+  scrollbar-color: linear-gradient(182.98deg, #eb5231 -4.09%, #571fcf 165.15%),
+    linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)) transparent;
   scrollbar-width: thin;
   box-sizing: content-box;
 }
